# Trident

./: .dockerignore  .env.example  .gitignore  Anonymous  CHANGELOG-cn.md  CHANGELOG.md  Dockerfile  README-cn.md  README.md  README_zh.md  RELEASE_NOTES_v1.7.8-cn.md  RELEASE_NOTES_v1.7.8.md  RELEASE_NOTES_v1.7.9-cn.md  RELEASE_NOTES_v1.7.9.md  ROADMAP-cn.md  ROADMAP.md  SxyLao1  app.py  banner.txt  clean_pycache.bat  clean_pycache.sh  config.example.toml  config.toml  conftest.py  docker-compose.yml  gunicorn.conf.py  install.bat  install.sh  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.bat  run_tests.py  start.bat  start.sh  start_background.bat  start_background.sh  stop.bat  stop.sh  (+2 more)
.github/workflows/: ci.yml
assets/: preview.html
config/: __init__.py  csrf_config.py  loader.py  registry.py  version.py
core/: __init__.py  advanced_bypass.py  block_ledger.py  config_watcher.py  decoder.py  ip_blocker.py  log_analyzer.py  log_heuristic.py  log_monitor.py  manual_scanner.py  memory_shell_tracer.py  metrics.py  models.py  monitor.py  notifier.py  plugin_manager.py  quarantine.py  scanner.py  siem_exporter.py  suspicious_registry.py  threat_graph.py  waf_client.py  wal_manager.py  yara_engine.py
core/decay/: simple_decay.py
core/domain/: __init__.py  entities.py  registry_adapter.py
core/interfaces/: __init__.py  notifier.py  plugin.py  waf_source.py
core/repositories/: __init__.py  json_repository.py  sqlite_repository.py
core/similarity/: file_cluster.py  hash_engine.py
data/: suspicious_registry.json
plugins/: __init__.py  notifier_handler.py  quarantine_handler.py  stdout_logger.py  threat_graph_handler.py
plugins/waf_adapters/: __init__.py  aws_adapter.py  cloudflare_adapter.py  modsecurity_adapter.py  syslog_receiver.py
rules/webshell/: Custom_Eval_Generic.yar  asp_exec.yar  jsp_advanced.yar  jsp_exec.yar  jsp_godzilla.yar  php_base64.yar  php_eval.yar  php_exec.yar  php_system.yar
scripts/: background_launcher.py  install.py
scripts/systemd/: trident.service
src/anteumbra/: __init__.py  __main__.py
src/anteumbra/application/: plugin_manager.py
src/anteumbra/cli/: __init__.py  main.py
src/anteumbra/domain/: __init__.py  detector.py  entities.py  event_source.py  registry_adapter.py  repository.py
src/anteumbra/infrastructure/: __init__.py  block_ledger.py  ip_blocker.py  models.py  quarantine.py  suspicious_registry.py  threat_graph.py  waf_client.py  wal_manager.py
src/anteumbra/infrastructure/config/: loader.py  registry.py  version.py
src/anteumbra/infrastructure/detection/: file_cluster.py  manual_scanner.py  memory_shell_tracer.py  scanner.py  yara_engine.py
src/anteumbra/infrastructure/monitoring/: log_analyzer.py  log_monitor.py  metrics.py  (+3 more)
temp/: alert_flow_test.php  yara_perf.php
test/: test_integration.py  test_monitor.py  test_notifier.py  test_phase1.py  test_registry.py  test_runner.py  test_yara.py
tests/: conftest.py  e2e_test.py  mock_waf_scenarios.json  mock_waf_server.py  test_e2e_v184.py
tests/compatibility/: test_v178_api.py
tests/core/: __init__.py  conftest.py  test_domain_entities.py  test_json_repository.py  test_log_heuristic.py  test_memory_shell_tracer.py  test_plugin_manager.py  test_siem_exporter.py  test_sqlite_repository.py
tests/e2e/: __init__.py  conftest.py  test_detect_quarantine.py  test_file_clustering.py  test_ip_block_flow.py  test_waf_profiling.py
tests/e2e_ui/: __init__.py  conftest.py  test_dashboard.py  test_login.py  test_navigation.py  test_smoke.py
tests/tools/: verify_all_tools.py
tools/: admin_passwd.py  alert_simulator.py  check_registry_paths.py  ci_quick_validator.py  cleanup_sessions.py  cleanup_sse_clients.py  config_watcher_logger.py  diagnose_wal_rotation.py  false_positive.py  generate_demo_data.py  generate_test_data.py  recursive_webshell_scan.py  replay_wal.py  rule_extractor.py  show_suspicious_files.py  strong_passwd.py  sync_to_runtime.bat  verify_log_separation.py  verify_logging_symbols.py  verify_port_unified.py  verify_rules.py  verify_wildcard_support.py
tools/memory-shell/: README.md
tools/waf_proxy/: start_waf.bat  waf_proxy.py
translations/zh/LC_MESSAGES/: messages.mo  messages.po
trident.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: colored_formatter.py  compat.py  logger_factory.py  password_utils.py  path_utils.py  platform_utils.py  project_init.py  siem_formatter.py  sse_manager.py  version.py
web/: auth.py  factory.py
web/blueprints/: __init__.py  _shared.py  admin_bp.py  blocklist_bp.py  metrics.py  profiles_bp.py  quarantine_bp.py  records_bp.py  scanner_bp.py  yara_bp.py
web/static/css/: animations.css  base.css  dashboard.css  vars.css
web/static/js/: cyber-effects.js  dashboard.js  htmx-sse.js  htmx.min.js  sse-manager.js  utils.js
web/templates/admin/: config_watcher.html  dashboard.html  dashboard_content.html  error.html  login.html  monitor_content.html  overview.html  profile_detail.html  profile_report.html  profiles.html  quarantine.html  quarantine_detail.html  quarantine_list.html  record_detail.html  record_row_removed.html  records_table.html  registry_monitor.html  scanner.html  scanner_report.html  session_manager.html  settings.html  threats.html  wal_manager.html  yara_rules.html
(+71 files in other folders)
