[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trident-webshell"  # PyPI: trident is taken; will rename to anteumbra at v2.0
version = "1.9.5"
description = "Cross-Platform WebShell Detection System with Real-time Monitoring"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "SxyLao1"}]
keywords = ["webshell", "security", "detection", "yara", "waf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "flask>=2.3.3,<3.0.0",
    "flask-wtf>=1.2.1",
    "flask-session>=0.5.0",
    "wtforms>=3.1.2",
    "watchdog>=3.0.0",
    "requests>=2.32.3",
    "psutil>=5.9.8",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "colorama>=0.4.6",
    "urllib3>=2.2.2",
    "python-dotenv>=1.0.0",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
yara = ["yara-python>=4.3.0"]  # Requires VC++ Build Tools on Windows

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "web*", "config*", "utils*", "plugins*", "tools*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__", ".git*", "data/*", "logs/*"]

[tool.pytest.ini_options]
testpaths = ["tests/core"]
pythonpath = ["."]
