[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anteumbra"
version = "1.0.4"
description = "Anteumbra — Web Perimeter Threat Intelligence. Passive detection, semi-active response, attacker profiling."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SxyLao1"}]
keywords = ["webshell", "security", "detection", "yara", "waf", "forensics", "threat-intel", "profiling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: Log Analysis",
]
readme = "README.md"

dependencies = [
    "flask>=2.3.3,<3.0.0",
    "flask-wtf>=1.2.1",
    "flask-session>=0.5.0",
    "flask-babel>=3.1.0",
    "wtforms>=3.1.2",
    "watchdog>=3.0.0",
    "click>=8.1.0",
    "requests>=2.32.3",
    "psutil>=5.9.8",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "colorama>=0.4.6",
    "urllib3>=2.2.2",
    "python-dotenv>=1.0.0",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "playwright>=1.40"]
yara = ["yara-python>=4.3.0"]
full = ["yara-python>=4.3.0", "ssdeep", "py-tlsh"]

[project.scripts]
anteumbra = "anteumbra.__main__:main"

[project.urls]
Homepage = "https://github.com/SxyLao1/Anteumbra"
Repository = "https://github.com/SxyLao1/Anteumbra.git"
Issues = "https://github.com/SxyLao1/Anteumbra/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
